[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-rbac-icdc"
version = "0.1.0"
description = "Flask RBAC library using YAML config file"
authors = [
    { name = "ICDC", email = "support@icdc.io" }
]
readme = "README.md"
dependencies = [
    "Flask",
    "PyYAML"
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/icdc-io/flask-rbac"
Repository = "https://github.com/icdc-io/flask-rbac.git"
